Addition of facility to add to the database with downdown box for media typeID and alert if successful.New css pages added and pfp files- add and save Media php files

--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -67,6 +67,6 @@ body.loggedin {
     margin: 0 0 10px 0;
 }
 
-tr:nth-child(even) {
-    background-color: #d6eeee;
-}
+/*tr:nth-child(even) {*/
+/*    background-color: #d6eeee;*/
+/*}*/
